--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -25,22 +25,15 @@ html, body {
     text-align: right;
 }
 #header {
-    height: 50px;
     width: 100%;
     background-color: white;
     color: black;
     font-size: large;
-    display: block;
+    display: inline-flex;
 }
 #title {
-    width: 70%;
-    display: inline-block;
+    width: 80%;
 }
 #auth {
-    width: 29%;
-    display: inline-block;
-}
-.oper {
-    padding: 10px 20px 10px 20px;
-    background-color: white;
+    width: 20%;
 }
